--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background: #fff url("/assets/bg/abstract-bg.svg") no-repeat center top fixed;
+  background-size: cover;
+  font-family: "Inter", sans-serif;
+  color: #1f2937;
+}
